# mckrakens-musings

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.old  .pymarkdown-linting-cfg.json  .terraform-version  404.html  Makefile  Makefile.container  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tags.json
.devcontainer/: Dockerfile  devcontainer.json
.github/linters/: .cfnlintrc.yml  .flake8  .markdownlint.json  .mega-linter.yml  .pre-commit-config-ghactions.yaml  .prettierrc  .prettierrc.json  .pylintrc  .tflint.hcl  .typos.toml  .yaml-lint.yml
.github/workflows/: build_n_push_docs.yml  main.yml  on_pr.yml  pull_request.yml
assets/javascripts/: bundle.6df46069.min.js
assets/stylesheets/: extra.css  main.0d440cfe.min.css  main.0d440cfe.min.css.map
docs/: index.md
docs/assets/javascripts/: crossway_crossref.js
docs/assets/overrides/: main.html
docs/assets/stylesheets/: extra.css  passage.css
docs/bible_studies/: index.md
docs/bible_studies/james/: james_esv.md
docs/general/: contributing.md
docs/musings/posts/: hello-test.md
docs/stylesheets/: extra.css
docs/training/Kubernetes-CKAD/: exam_overview.md  intro_to_k8s_lf.md  training_materials.md
docs/workstation_configuration/: local_kubernetes.md  set_up_mkdocs.md
general/tags/: index.html
musings/: index.html
scripts/: markdown-lint.sh
search/: search_index.json
training/Kubernetes-CKAD/application_deployment/: index.html
training/Kubernetes-CKAD/application_design_and_build/: index.html
training/Kubernetes-CKAD/exam_overview/: index.html
workstation_configuration/local_kubernetes/: index.html
workstation_configuration/set_up_mkdocs/: index.html
(+7 files in other folders)
